<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.orazoulay.requestapplication.Readme">



    <TextView
        android:id="@+id/readmeTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/app_information"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginMargTop"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str1" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str2" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str3" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str4" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str5" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str6" />
    <Button
        android:id="@+id/Readme_Exit_B"
        android:text="@string/exit"
        android:layout_width="@dimen/LoginButtonWid"
        android:layout_height="@dimen/ButtonLoginHei"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        />


</LinearLayout>
