<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.orazoulay.requestapplication.MainActivity">


    <EditText
        android:id="@+id/userName_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        />

    <EditText
        android:id="@+id/password_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userName_ET"
        android:layout_below="@+id/userName_ET"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPersonName"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/Login_B"
        android:text="@string/login"
        android:layout_width="@dimen/LoginButtonWid"
        android:layout_height="@dimen/ButtonLoginHei"
        android:layout_below="@+id/password_ET"
        android:layout_marginTop="20dp"
        android:layout_marginStart="90dp"
        />
    <Button
        android:id="@+id/Register_B"
        android:text="@string/register"
        android:layout_width="@dimen/LoginButtonWid"
        android:layout_height="@dimen/ButtonLoginHei"
        android:layout_below="@+id/Login_B"
        android:layout_marginTop="@dimen/loginMargTop"
        android:layout_marginStart="@dimen/loginMargStart"
        />
    <Button
        android:id="@+id/Readme_B"
        android:text="@string/readme"
        android:layout_width="@dimen/LoginButtonWid"
        android:layout_height="@dimen/ButtonLoginHei"
        android:layout_below="@id/Register_B"
        android:layout_marginTop="@dimen/loginMargTop"
        android:layout_marginStart="@dimen/loginMargStart"


        />
</RelativeLayout>
